--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11,17 +11,17 @@
 }
 
 .form_page {
-  width: 30%;
+  width: 40%;
   margin: 20px auto;
   border: 1px solid grey;
   border-radius: 4px;
   text-align: center;
-  width: 40%;
   padding-bottom: 19px;
 }
 
 .form_page h1 {
   padding-bottom: 4px;
+  font-size: 55px;
 }
 
 .navbar-default {
